# GPR200-FinalProject

./: CMakeLists.txt  README.md
core/: CMakeLists.txt
core/idk/: camera.cpp  camera.h  cubemap.cpp  cubemap.h  particle.cpp  particle.h  particles.cpp  particles.h  shader.cpp  shader.h  texture2d.cpp  texture2d.h
resources/: Header pin.txt  Method pin.txt
src/: CMakeLists.txt  main.cpp
src/assets/: brimstone.vert  cubemap.vert
src/assets/particles/: particle.vert
src/assets/terrain/: terrain.frag  terrain.tesc  terrain.tese  terrain.vert
